# Catchy

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  render.yaml  vercel.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  security_deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: auth.py  health.py  scan.py  scans.py
backend/app/core/: config.py  logging.py  middleware.py  ratelimit.py  security.py
backend/app/db/: __init__.py  base.py  models.py  repositories.py  session.py
backend/app/schemas/: __init__.py  auth.py  email.py  features.py  intel.py  llm.py  scan.py  scan_record.py
backend/app/services/: __init__.py  analysis.py
backend/app/services/features/: __init__.py  extractor.py  lexicons.py
backend/app/services/intel/: __init__.py  cache.py  service.py
backend/app/services/intel/providers/: __init__.py  base.py  hibp.py  rdap.py  urlscan.py  virustotal.py
backend/app/services/llm/: __init__.py  analyst.py  base.py  gemini.py  prompt.py
backend/app/services/ml/: __init__.py  predictor.py
backend/app/services/parsing/: __init__.py  addresses.py  attachments.py  auth.py  bodies.py  parser.py  urls.py
backend/app/services/scoring/: __init__.py  fusion.py  rules.py  scorer.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_analyze_api.py  test_auth.py  test_features.py  test_fusion.py  test_hardening.py  test_health.py  test_history.py  test_intel.py  test_llm.py  test_ml_serving.py  test_parser.py  test_scan_api.py  test_scoring.py
backend/tests/fixtures/: benign.eml  phishing.eml
docs/: architecture.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  AuthForm.tsx  IndicatorList.tsx  Logo.tsx  Placeholder.tsx  ScoreGauge.tsx  (+3 more)
ml/: README.md  requirements.txt  ruff.toml
(+24 files in other folders)
