[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catchy-backend"
version = "0.1.0"
description = "Catchy backend — FastAPI + Celery phishing-detection API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "celery>=5.4",
    "redis>=5.0",
    "httpx>=0.27",  # async client for threat-intel provider calls
    # ML serving: load and run the M3 model bundle. The artifact holds only
    # sklearn/scipy objects, so the training package (catchy_ml) is not needed here.
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "numpy>=1.26",
    "joblib>=1.4",
    "lightgbm>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends(...)` in argument defaults is the idiomatic DI pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
